fix overflow container issue on discount product section

--- a/css/newStyle.css
+++ b/css/newStyle.css
@@ -171,13 +171,14 @@ h2 {
 .discount-product-section {
   height: fit-content;
   max-width: 100%;
-  white-space: nowrap;
+
   background-color: green; /* Warna latar belakang untuk bagian diskon */
   padding: 20px; /* Padding untuk memberikan ruang di sekitar konten */
 }
 
 .discount-product-list-container {
-  max-width: 1100px;
+  max-width: 100vw;
+  overflow-x: auto;
   display: flex;
   justify-content: center;
 }
@@ -189,7 +190,7 @@ h2 {
   margin-right: 20px;
 }
 .discount-product-list {
-  max-width: 60vw;
+  max-width: 68vw;
   align-items: center;
   display: inline-flex;
   border-radius: 10px; /* Memberikan sudut melengkung pada daftar produk */
